# OS

./: CMakeLists.txt  main.cpp
.qtcreator/: CMakeLists.txt.user.1f11817  CMakeLists.txt.user.3e3814b
24127147_24127204-Code/: Output.txt  Scheduler.cpp  Scheduler.h  fileHandler.cpp  fileHandler.h  main.cpp
backend/: FAT32.cpp  FAT32.h  Scheduler.cpp  Scheduler.h
frontend/: GUI.cpp  GUI.h
source/: Scheduler.cpp  Scheduler.h  fileHandler.h  main.cpp
